PR feedback fixed

--- a/public/index.html
+++ b/public/index.html
@@ -2,26 +2,57 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Webpack App</title>
+    <title>Calculator :)</title>
   </head>
   <body>
     <div id="root">
-      <img id="background" src="background.jpg" />
+      <img id="background" />
       <div id="calculator">
         <input id="input-field" />
         <div class="row">
           <div class="secondary-action" id="ac">AC</div>
           <div class="non-inputtable-action" id="sign-change-button">+/-</div>
           <div class="non-inputtable-action" id="percentage-button">%</div>
-          <div class="primary-action" id="division-button">÷</div>
+          <div class="primary-action">÷</div>
         </div>
         <div class="row">
+          <div class="non-inputtable-action" id="calculate-squared-button">
+            x²
+          </div>
+          <div class="non-inputtable-action" id="calculate-cubed-button">
+            x³
+          </div>
+          <div class="non-inputtable-action" id="calculate-to-a-power-button">
+            xʸ
+          </div>
+          <div
+            class="non-inputtable-action"
+            id="calculate-ten-in-power-of-value-button"
+          >
+            10ˣ
+          </div>
+          <div class="number">7</div>
           <div class="number">7</div>
           <div class="number">8</div>
           <div class="number">9</div>
           <div class="primary-action">×</div>
         </div>
         <div class="row">
+          <div class="non-inputtable-action" id="calculate-one-divide-by-value">
+            1/x
+          </div>
+          <div
+            class="non-inputtable-action"
+            id="calculate-square-root-of-value-button"
+          >
+            √x
+          </div>
+          <div
+            class="non-inputtable-action"
+            id="calculate-cube-root-of-value-button"
+          >
+            ∛x
+          </div>
           <div class="number">4</div>
           <div class="number">5</div>
           <div class="number">6</div>
